--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,6 @@ body {
   font-family: "Russo One", sans-serif;
   color: white;
   -webkit-tap-highlight-color: transparent;
-  background-color: #333;
 }
 
 :root {
@@ -21,7 +20,7 @@ button:hover,
 .project-item:hover,
 .skill-item:hover,
 .item:not(.active):hover,
-.sub-container-2:not(.active-subheadind):hover, 
-.sub-container-3:not(.active-subheadind):hover {
+.sub-container-2:not(.active-subheading):hover,
+.sub-container-3:not(.active-subheading):hover {
   background-image: linear-gradient(90deg, #ffffff00, #ffffff42 50%, #ffffff00);
 }
